--- a/GolfingStats/GolfingStats/Pages/RoundDetailsPage.xaml
+++ b/GolfingStats/GolfingStats/Pages/RoundDetailsPage.xaml
@@ -13,10 +13,10 @@
                         <Label HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Text="Par" />
                         <Picker HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Title="Par" SelectedItem="{Binding Par}">
                             <Picker.ItemsSource>
-                                <x:Array Type="{x:Type x:String}">
-                                    <x:String>3</x:String>
-                                    <x:String>4</x:String>
-                                    <x:String>5</x:String>
+                                <x:Array Type="{x:Type x:Int16}">
+                                    <x:Int16>3</x:Int16>
+                                    <x:Int16>4</x:Int16>
+                                    <x:Int16>5</x:Int16>
                                 </x:Array>
                             </Picker.ItemsSource>
                         </Picker>
@@ -25,25 +25,25 @@
                         <Label HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Text="Stroke" />
                         <Picker HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Title="Stroke" SelectedItem="{Binding Stroke}">
                             <Picker.ItemsSource>
-                                <x:Array Type="{x:Type x:String}">
-                                    <x:String>1</x:String>
-                                    <x:String>2</x:String>
-                                    <x:String>3</x:String>
-                                    <x:String>4</x:String>
-                                    <x:String>5</x:String>
-                                    <x:String>6</x:String>
-                                    <x:String>7</x:String>
-                                    <x:String>8</x:String>
-                                    <x:String>9</x:String>
-                                    <x:String>10</x:String>
-                                    <x:String>11</x:String>
-                                    <x:String>12</x:String>
-                                    <x:String>13</x:String>
-                                    <x:String>14</x:String>
-                                    <x:String>15</x:String>
-                                    <x:String>16</x:String>
-                                    <x:String>17</x:String>
-                                    <x:String>18</x:String>
+                                <x:Array Type="{x:Type x:Int16}">
+                                    <x:Int16>1</x:Int16>
+                                    <x:Int16>2</x:Int16>
+                                    <x:Int16>3</x:Int16>
+                                    <x:Int16>4</x:Int16>
+                                    <x:Int16>5</x:Int16>
+                                    <x:Int16>6</x:Int16>
+                                    <x:Int16>7</x:Int16>
+                                    <x:Int16>8</x:Int16>
+                                    <x:Int16>9</x:Int16>
+                                    <x:Int16>10</x:Int16>
+                                    <x:Int16>11</x:Int16>
+                                    <x:Int16>12</x:Int16>
+                                    <x:Int16>13</x:Int16>
+                                    <x:Int16>14</x:Int16>
+                                    <x:Int16>15</x:Int16>
+                                    <x:Int16>16</x:Int16>
+                                    <x:Int16>17</x:Int16>
+                                    <x:Int16>18</x:Int16>
                                 </x:Array>
                             </Picker.ItemsSource>
                         </Picker>
@@ -52,16 +52,16 @@
                         <Label HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Text="Score" />
                         <Picker HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Title="Score" SelectedItem="{Binding Score}">
                             <Picker.ItemsSource>
-                                <x:Array Type="{x:Type x:String}">
-                                    <x:String>1</x:String>
-                                    <x:String>2</x:String>
-                                    <x:String>3</x:String>
-                                    <x:String>4</x:String>
-                                    <x:String>5</x:String>
-                                    <x:String>6</x:String>
-                                    <x:String>7</x:String>
-                                    <x:String>8</x:String>
-                                    <x:String>9</x:String>
+                                <x:Array Type="{x:Type x:Int16}">
+                                    <x:Int16>1</x:Int16>
+                                    <x:Int16>2</x:Int16>
+                                    <x:Int16>3</x:Int16>
+                                    <x:Int16>4</x:Int16>
+                                    <x:Int16>5</x:Int16>
+                                    <x:Int16>6</x:Int16>
+                                    <x:Int16>7</x:Int16>
+                                    <x:Int16>8</x:Int16>
+                                    <x:Int16>9</x:Int16>
                                 </x:Array>
                             </Picker.ItemsSource>
                         </Picker>
@@ -83,7 +83,7 @@
                         <Switch HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" IsToggled="{Binding GIR}" />
                     </StackLayout>
 
-                    <Button HorizontalOptions="FillAndExpand" VerticalOptions="Start" HeightRequest="80" Text="Add Shot" BackgroundColor="Transparent" TextColor="Blue" />
+                    <Button HorizontalOptions="FillAndExpand" VerticalOptions="Start" HeightRequest="80" Text="Add Shot" BackgroundColor="Transparent" TextColor="Blue" Clicked="AddShot" />
                 </StackLayout>
             </ContentPage>
         </DataTemplate>
