Shots are diplayed as list on hole details page when saved

--- a/GolfingStats/GolfingStats/Pages/HolesDetailsPage.xaml
+++ b/GolfingStats/GolfingStats/Pages/HolesDetailsPage.xaml
@@ -62,7 +62,7 @@
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <TextCell Text="{Binding Club}" TextColor="ForestGreen"
-                                              Detail="{Binding DistanceToHole}" />
+                                              Detail="{Binding DistanceToHole, StringFormat='Distance to hole: {0}'}" />
                                 </DataTemplate>
                             </ListView.ItemTemplate>
                         </ListView>
